use supported Arrays.asList